MediaQueries : correction gap section activities

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -630,6 +630,10 @@ label {
     display: flex;
     flex-direction: column;
     padding: 0 20px;
+    gap: 25px;
+  }
+  .activities__layout--column {
+    gap: 25px;
   }
   .activities > h2 {
     margin-left: 20px;
